Add new font and images; update index and style for portfolio

--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
     src: url(fonts/fonnts.com-moranga-mediumit.otf);
 }
 
+@font-face {
+    font-family: font2;
+    src: url(fonts/Macondo-Regular.ttf);
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -16,8 +21,8 @@ body {
 }
 
 main {
-    height: 100%;
     width: 100%;
+    background-color: black;
 }
 
 /* Navbar code */
@@ -28,10 +33,10 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    position: absolute;
     margin-top: 2vmax;
     padding-left: 2vmax;
     padding-right: 2vmax;
+    z-index: 555;
 }
 
 nav h1 {
@@ -52,29 +57,24 @@ nav svg:hover {
 }
 
 nav button {
-    background-color: #3FD2F0;
     color: white;
     font-size: 1rem;
     padding: 1.5vh 3vh;
     border: none;
     border-radius: 1vmax;
     cursor: pointer;
+    background: linear-gradient(black, white);
 }
 
 nav button:hover {
-    scale: 0.8;
+    scale: 0.9;
 }
 
 /* navbar reponsive */
 
 @media(max-width:600px) {
     nav {
-        position: absolute;
-        width: 100%;
-        margin-top: 3vmax;
-        padding-left: 2vmax;
-        padding-right: 2vmax;
-        z-index: 999;
+        padding-top: 1vmax;
     }
 
     nav h1 {
@@ -95,36 +95,73 @@ nav button:hover {
 /* page1 code */
 
 .page1 {
-    min-height: 100%;
+    height: 100vh;
     width: 100%;
-    background-color: #06080A;
+    position: relative;
 }
 
-.hero-pic {
-    min-height: 100vh;
+.page1 video {
     width: 100%;
-}
-
-.hero-pic video {
-    height: 100%;
-    width: 100%;
+    position: fixed;
     z-index: 111;
+    display: none;
 }
 
-.hero-pic img {
+.page1 img {
     height: 31vmax;
     width: 65%;
     position: absolute;
+    position: relative;
     top: 11vmax;
     left: 16vmax;
     z-index: 222;
 }
 
+/* page1-responsive */
+
+@media(max-width:600px) {
+
+    .page1 {
+        height: 100vw;
+    }
+
+    .page1 video {
+        position: static;
+        display: none;
+    }
+
+    .page1 img {
+        height: 30vmax;
+        width: 100%;
+        position: absolute;
+        top: 15vmax;
+        left: 0;
+    }
+
+}
+
+/* page2 code */
+
+.page2 {
+    height: 60px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.page2-container {
+    height: 50px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #2aaf7c;
+    z-index: 555;
+}
+
 .scroll-div {
     width: 100%;
-    position: relative;
-    position: absolute;
-    top: 48vmax;
     display: flex;
     white-space: nowrap;
     overflow-x: auto;
@@ -158,39 +195,31 @@ nav button:hover {
     }
 }
 
-/* page1-responsive */
+/* page2 responsive */
 
 @media(max-width:600px) {
-
-    .page1 {
-        min-height: 60%;
+    .page2 {
+        height: 5vh;
+        margin-top: 2vw;
     }
 
-    .hero-pic {
-        min-height: 100%;
+    .page2-container {
+        height: 30px;
     }
 
-    .hero-pic img {
-        height: 30vmax;
-        width: 100%;
-        position: absolute;
-        top: 15vmax;
-        left: 0;
-    }
-
-    .scroll-div {
-        margin-top: 3vmax;
+    .scroll-div h1 {
+        font-size: 2vh;
     }
 }
 
-/* page2 code */
+/* page3 code */
 
-.page2 {
+.page3 {
     height: 100vh;
     width: 100%;
     color: white;
     position: relative;
-    background-color: black;
+    z-index: 555;
 }
 
 .about-me {
@@ -204,10 +233,10 @@ nav button:hover {
     font-family: font1;
 }
 
-.page2-heading {
+.page3-heading {
     font-size: 3vmax;
     padding-bottom: 1vmax;
-    color: #FE7D84;
+    color: #2aaf7c;
 
 }
 
@@ -225,7 +254,7 @@ nav button:hover {
     margin-bottom: 1vmax;
 }
 
-.about-p1 strong{
+.about-p1 strong {
     color: #38CDFA;
 }
 
@@ -238,7 +267,7 @@ nav button:hover {
     color: #FE7D84;
 }
 
-.about-skill{
+.about-skill {
     color: #38CDFA;
 }
 
@@ -252,52 +281,214 @@ nav button:hover {
     margin-bottom: 1vmax;
 }
 
-/* page2 responsive */
-
-@media(max-width:600px){
-    
-.page2 {
-    height: 65vh;
-}
-
-.about-container {
-    height: 70%;
+.icons-container {
+    height: 200px;
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: absolute;
+    top: 22vmax;
 }
+
+.icons-cont-1 {
+    rotate: -45deg;
 }
 
-/* page3 code */
+.icons-cont-2 {
+    rotate: 45deg;
+}
 
+/* page3 responsive */
 
-.page3 {
+@media(max-width:600px) {
+
+    .page3 {
+        height: 60vh;
+        padding-top: 5vmax;
+    }
+
+    .about-container {
+        height: 100%;
+        width: 100%;
+        padding-top: 2vmax;
+    }
+
+    .icons-container {
+        display: none;
+    }
+}
+
+/* page4 code */
+
+.page4 {
+    min-height: 100vh;
+    width: 100%;
+    color: white;
+    z-index: 555;
+}
+
+.page4-top {
+    height: 30vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 6vmax;
+}
+
+.page4-top h1 {
+    font-size: 5vmax;
+    font-family: font1;
+}
+
+.page4-bottom {
     height: 100vh;
     width: 100%;
-    background-color: black;
-    display: flex;
+    color: white;
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     gap: 50px;
-    align-items: center;
-    justify-content: center;
+    z-index: 555;
 }
 
-.page3-left {
-    height: 100%;
+.page4-left {
+    height: 70%;
     width: 45%;
-    color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    /* background-color: bisque; */
 }
 
-.page3-right {
-    height: 100%;
+.page4-left h1 {
+    margin: 2vh;
+    font-family: font1;
+}
+
+.page4-left h2 {
+    margin: 2vh;
+    font-family: font2;
+    font-size: 6vh;
+}
+
+.page4-left p {
+    line-height: 1.5;
+    font-family: font2;
+    font-size: 3vh;
+}
+
+
+.page4-right {
+    height: 70%;
     width: 45%;
-    color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    /* background-color: cadetblue; */
+}
+
+.page4-right h1 {
+    margin: 2vh;
+    font-family: font1;
+}
+
+.page4-right h2 {
+    margin: 2vh;
+    font-family: font2;
+    font-size: 6vh;
+}
+
+.page4-right p {
+    line-height: 1.5;
+    font-family: font2;
+    font-size: 3vh;
+}
+
+/* page4 reponsive */
+
+@media(max-width:600px) {
+
+
+    .page4 {
+        min-height: 100vh;
+    }
+
+    .page4-top {
+        height: 13vh;
+        padding-top: 0;
+
+    }
+
+    .page4-top h1 {
+        font-size: 2vmax;
+    }
+
+    .page4-arrow img {
+        height: 100px;
+    }
+
+    .page4-bottom {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 50px;
+        z-index: 555;
+    }
+
+    .page4-left {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .page4-left h1 {
+        margin: 2vh;
+        font-family: font1;
+    }
+
+    .page4-left h2 {
+        margin: 2vh;
+        font-family: font2;
+        font-size: 6vh;
+    }
+
+    .page4-left p {
+        line-height: 1.5;
+        font-family: font2;
+        font-size: 3vh;
+    }
+
+
+    .page4-right {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .page4-right h1 {
+        margin: 2vh;
+        font-family: font1;
+    }
+
+    .page4-right h2 {
+        margin: 2vh;
+        font-family: font2;
+        font-size: 6vh;
+    }
+
+    .page4-right p {
+        line-height: 1.5;
+        font-family: font2;
+        font-size: 3vh;
+    }
 }
