--- a/style.css
+++ b/style.css
@@ -456,6 +456,7 @@ nav button:hover {
 
     .page4-right p {
         font-size: 2vh;
+        padding-bottom: 10vmax;
     }
 }
 
@@ -489,23 +490,37 @@ nav button:hover {
     padding: 10px;
 }
 
-.box h1 {
-    font-family: font1;
-    opacity: 0;
+.page5 h1 {
+    text-align: center;
+    font-family: font2;
+    color: #38CDFA;
 }
 
-.box.active{
+.box.active {
     flex: 5;
 }
 
-.box.active h1{
-    opacity: 1;
+
+/* page5 reponsive */
+
+@media(max-width:600px) {
+
+    .page5 {
+        height: 50vh;
+        border-top: 1px solid white;
+        border-bottom: 1px solid white;
+    }
+
+    .box {
+        height: 25vmax;
+    }
+
+    .page5 h1{
+        background-color: black;
+        padding-top: 5vmax;
+        padding-bottom: 5vmax;
+    }
+
 }
 
-
-
-@media(max-width:600px){
-  .page5{
-    display: none;
-  }
-}
+/* css end */
